[package]
name = "mcbe_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
notify = "6.1.1"
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
log = "0.4.20"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde = { version = "1.0.196", features = ["derive"] }
oslog = "0.2.0"
objc2 = "0.5.0"
icrate = { version = "0.1.0", features = ["Foundation_NSString", "Foundation"] }

[lib]
crate-type = ["staticlib"]
